--- a/app/views/product-case-testing/cases-page.html
+++ b/app/views/product-case-testing/cases-page.html
@@ -1,7 +1,7 @@
 {% extends "layout-user-testing.html" %}
 
 {% block pageTitle %}
-    Cases
+    Cases page
 {% endblock %}
 
 
@@ -528,5 +528,14 @@
     </section>
 
 </div>
+
+
+<script>
+  jQuery(document).ready(function(){
+
+    setMenuState('cases');
+
+  });
+</script>
 
 {% endblock %}
