--- a/app/views/product-case-testing/products-page.html
+++ b/app/views/product-case-testing/products-page.html
@@ -34,7 +34,7 @@
         </details>
     </div>
     <div class="govuk-grid-column-one-third govuk-!-margin-top-8">
-        <a href="/create-cases-add-products/do-you-have-the-barcode" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
+        <a href="/product-case-testing/do-you-have-the-barcode" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
             Add a product
         </a>
     </div>
@@ -423,7 +423,7 @@
                                 Actions
                             </th>
                             <td headers="item-01 actions-01" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-503</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-503</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -456,7 +456,7 @@
                                 Actions
                             </th>
                             <td headers="item-02 actions-02" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-440</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-440</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -489,7 +489,7 @@
                                 Actions
                             </th>
                             <td headers="item-03 actions-03" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-350</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-350</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -522,7 +522,7 @@
                                 Actions
                             </th>
                             <td headers="item-04 actions-04" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-660</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-660</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -555,7 +555,7 @@
                                 Actions
                             </th>
                             <td headers="item-05 actions-05" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-489</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-489</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -588,7 +588,7 @@
                                 Actions
                             </th>
                             <td headers="item-06 actions-06" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-746</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-746</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -621,7 +621,7 @@
                                 Actions
                             </th>
                             <td headers="item-07 actions-07" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-279</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-279</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -654,7 +654,7 @@
                                 Actions
                             </th>
                             <td headers="item-08 actions-08" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-509</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-509</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -687,7 +687,7 @@
                                 Actions
                             </th>
                             <td headers="item-09 actions-09" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-280</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-280</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -720,7 +720,7 @@
                                 Actions
                             </th>
                             <td headers="item-10 actions-10" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-503</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-503</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -753,7 +753,7 @@
                                 Actions
                             </th>
                             <td headers="item-11 actions-11" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-440</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-440</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -786,7 +786,7 @@
                                 Actions
                             </th>
                             <td headers="item-12 actions-12" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-350</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-350</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -819,7 +819,7 @@
                                 Actions
                             </th>
                             <td headers="item-13 actions-13" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-455</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-455</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -852,7 +852,7 @@
                                 Actions
                             </th>
                             <td headers="item-14 actions-14" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-638</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-638</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -885,7 +885,7 @@
                                 Actions
                             </th>
                             <td headers="item-15 actions-15" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-422</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-422</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -918,7 +918,7 @@
                                 Actions
                             </th>
                             <td headers="item-16 actions-16" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-798</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-798</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -951,7 +951,7 @@
                                 Actions
                             </th>
                             <td headers="item-17 actions-17" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-233</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-233</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -984,7 +984,7 @@
                                 Actions
                             </th>
                             <td headers="item-18 actions-18" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-521</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-521</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -1017,7 +1017,7 @@
                                 Actions
                             </th>
                             <td headers="item-19 actions-19" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 251</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 251</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -1050,7 +1050,7 @@
                                 Actions
                             </th>
                             <td headers="item-20 actions-20" colspan="3" class="govuk-table__cell">
-                                <a href="/create-cases-add-products/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-489</span></a>
+                                <a href="/product-case-testing/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for psd-489</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -1098,5 +1098,13 @@
         });
     });
 </script-->
+
+<script>
+  jQuery(document).ready(function(){
+
+    setMenuState('products');
+
+  });
+</script>
 
 {% endblock %}
