--- a/app/views/product-case-testing/start.html
+++ b/app/views/product-case-testing/start.html
@@ -22,8 +22,10 @@
       <p class="govuk-body-l">Today we will ask you to complete 3 tasks:</p>
 
       <h2 class="govuk-heading-m">
-        Task 1
+        Task 1 - create a case
       </h2>
+
+      <p class="govuk-body">The case relates to a product.</p>
 
       <p class="govuk-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse velit justo, pretium ut diam ut, posuere auctor diam. Suspendisse eu pharetra felis. Suspendisse faucibus mi nec odio elementum consequat. Aliquam eu felis ut lectus venenatis sagittis. Duis eu est cursus, bibendum nunc id, porta mi. Vivamus varius arcu non nibh aliquet, in luctus sem egestas. Pellentesque ullamcorper fringilla tincidunt. Nullam felis tortor, sollicitudin sed velit faucibus, molestie sagittis nibh. In hac habitasse platea dictumst.</p>
 
@@ -65,5 +67,13 @@
 
 
   </div>
+
+<script>
+  jQuery(document).ready(function(){
+
+    setMenuState('off');
+
+  });
+</script>
 
 {% endblock %}
