--- a/app/views/includes/scripts-testing.html
+++ b/app/views/includes/scripts-testing.html
@@ -1,5 +1,5 @@
 <!-- Javascript -->
-<script src="/public/javascripts/jquery-1.11.3.js"></script>
+<!--script src="/public/javascripts/jquery-1.11.3.js"></script-->
 
 {% for scriptUrl in extensionConfig.scripts %}
   <script src="{{scriptUrl}}"></script>
