--- a/app/views/product-case-testing/find-the-product.html
+++ b/app/views/product-case-testing/find-the-product.html
@@ -15,51 +15,121 @@
 
 
 {% block content %}
+<div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary" style="display: none;">
+  <h2 class="govuk-error-summary__title" id="error-summary-title">
+    There is a problem
+  </h2>
+  <div class="govuk-error-summary__body">
+
+    <ul class="govuk-list govuk-error-summary__list">
+
+      <li>
+
+        <a href="#related">Select yes if the case is product related</a>
+
+      </li>
+
+    </ul>
+  </div>
+</div>
+
+
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-        <form class="form" action="#" method="post" novalidate>
+        <form class="form" id="test-form" action="#" method="post" novalidate>
 
 
-{{ govukRadios({
-  idPrefix: "related",
-  name: "related",
-  classes: "govuk-!-padding-top-3",
 
-  fieldset: {
-    legend: {
-      text: "Is the case product related?",
-      isPageHeading: true,
-      classes: "govuk-fieldset__legend--l"
-    }
-  },
+<div class="govuk-form-group" data-test-for="radio" data-test-radio-name="related">
 
-  items: [
-    {
-      value: "yes",
-      text: "Yes - go to the products page",
-      hint: {
-        classes: "govuk-!-font-size-16 govuk-!-margin-bottom-4",
-        html: 'The product may already exist within our records. On the products page you can search for it or add a new product. You can then <span class="govuk-!-font-weight-bold">create a case</span> directly from the product.'
-      }
-    },
-    {
-      value: "no",
-      text: "No - create a case",
-      hint: {
-        classes: "govuk-!-font-size-16",
-        text: "The case might not relate to a product, or the product details aren't yet available. You can add a product to a case later from the cases page."
-      }
-    }
-  ]
-}) }}
+  <fieldset class="govuk-fieldset">
 
-{{ govukButton({
-  text: "Continue"
-}) }}
+  <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+
+    <h1 class="govuk-fieldset__heading">
+      Is the case product related?
+    </h1>
+
+  </legend>
+
+  <span class="govuk-error-message">
+    <span class="govuk-visually-hidden">Error:</span> Select yes if the case is product related
+  </span>
+
+  <div class="govuk-radios govuk-!-padding-top-3">
+
+
+
+
+
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="related" name="related" type="radio" value="yes" aria-describedby="related-item-hint">
+          <label class="govuk-label govuk-radios__label" for="related">
+        Yes - go to the products page
+      </label>
+
+          <div id="related-item-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-4">
+        The product may already exist within our records. On the products page you can search for it or add a new product. You can then <span class="govuk-!-font-weight-bold">create a case</span> directly from the product.
+      </div>
+
+        </div>
+
+
+
+
+
+
+
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="related-2" name="related" type="radio" value="no" aria-describedby="related-2-item-hint">
+          <label class="govuk-label govuk-radios__label" for="related-2">
+        No - create a case
+      </label>
+
+          <div id="related-2-item-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16">
+        The case might not relate to a product, or the product details aren&#39;t yet available. You can add a product to a case later from the cases page.
+      </div>
+
+        </div>
+
+
+
+
+  </div>
+
+
+</fieldset>
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+<button class="govuk-button" data-module="govuk-button">
+  Continue
+</button>
+
 
         </form>
 
     </div>
   </div>
+
+
+<script>
+  jQuery(document).ready(function(){
+
+    setMenuState('cases');
+
+  });
+</script>
 {% endblock %}
