Responsible Person updates

--- a/app/views/product-case-testing/find-the-product.html
+++ b/app/views/product-case-testing/find-the-product.html
@@ -66,14 +66,16 @@
 
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="related" name="related" type="radio" value="yes" aria-describedby="related-item-hint related-item-hint2">
-          <label class="govuk-label govuk-radios__label" for="related">
-        Yes - go to the products page
-      </label>
-          <div id="related-item-hint" class="govuk-hint govuk-radios__hint govuk-!-margin-bottom-4" style="font-size: 18px; font-size: 1.1rem;">Find your product, or add it to our records, and then create a case for it. </div>
-          <div id="related-item-hint2" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-4">
-        The product may already exist within our records. On the products page you can search for it or add a new product. You can then <span class="govuk-!-font-weight-bold">create a case</span> directly from the product.
-      </div>
+          <label class="govuk-label govuk-radios__label govuk-!-margin-bottom-2" for="related">
+            Yes - go to the products page
+          </label>
 
+          <!--div id="related-item-hint" class="govuk-hint govuk-radios__hint govuk-!-margin-bottom-0" style="font-size: 18px; font-size: 1.1rem;">
+            Create your case from the product.
+          </div-->
+          <div id="related-item-hint2" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-4">
+            Create your case from the product. Find the product - or add it to our records - and then create your case from there.
+          </div>
         </div>
 
 
@@ -84,16 +86,13 @@
 
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="related-2" name="related" type="radio" value="no" aria-describedby="related-2-item-hint related-2-item-hint2">
-          <label class="govuk-label govuk-radios__label" for="related-2">
-        No - create a case
-      </label>
-
-      <div id="related-item-hint" class="govuk-hint govuk-radios__hint govuk-!-margin-bottom-4" style="font-size: 18px; font-size: 1.1rem;">There is no product involved.</div>
+          <label class="govuk-label govuk-radios__label govuk-!-margin-bottom-2" for="related-2">
+            No - create a case
+          </label>
 
           <div id="related-2-item-hint2" class="govuk-hint govuk-radios__hint govuk-!-font-size-16">
-        The case might not relate to a product, or the product details aren&#39;t yet available. You can add a product to a case later from the cases page.
-      </div>
-
+            The case might not relate to a product, or the product details aren&#39;t available yet. You can add a product to a case later from the cases page.
+          </div>
         </div>
 
 
