--- a/app/views/responsible-person-address/responsible-person-address_alt.html
+++ b/app/views/responsible-person-address/responsible-person-address_alt.html
@@ -34,15 +34,11 @@
                 </p>
 
                 <p class="govuk-body-s">
-                    The Responsible Person - the legal person or natural person - must be a legal entity established in the <abbr>UK</abbr>. The address provided must be that of the legal entity named as the Responsible Person. The Responsible Person must provide a <abbr>UK</abbr> address, which cannot be a <abbr title="Post Office">PO</abbr> box or mail forwarding address.
+                    The Responsible Person - the legal person or natural person - is a legal entity that must be established in the <abbr>UK</abbr>. The address provided must be that of the legal entity named as the Responsible Person. The Responsible Person must provide a <abbr>UK</abbr> address, which cannot be a <abbr title="Post Office">PO</abbr> box or mail forwarding address.
                 </p>
 
                 <p class="govuk-body-s">
                     A Responsible Person is legally bound by the obligations in the Cosmetics Regulation.
-                </p>
-
-                <p class="govuk-body-s">
-                    For more information about a <abbr>UK</abbr> Responsible Person: <br class="opss-br-desktop"><a href="https://www.gov.uk/guidance/regulating-medical-devices-in-the-uk#responsible" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">gov.uk/guidance/regulating-medical-devices-in-the-uk (opens in a new tab)</a>.
                 </p>
 
             </div>
