--- a/app/views/index.html
+++ b/app/views/index.html
@@ -121,16 +121,24 @@
       <p class="govuk-body"><a href="/drafts-gui/index.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Drafts <abbr>GUI</abbr> 1194</a></p>
 
       <h3 class="govuk-heading-s">Responsible Person address form (COSBETA-1216)</h3>
-      <p class="govuk-body">The current live service has two variants of the same page (individual or business), as here, but the difference is only the bold Address label?</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="/responsible-person-address/responsible-person-address_individual.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - individual</a></li>
-        <li><a href="/responsible-person-address/responsible-person-address_business.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - business</a></li>
-        <li><i><a href="/responsible-person-address/responsible-person-address_alt.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - alternative design with hints</a></i></li>
+        <!--li><a href="/responsible-person-address/responsible-person-address_individual.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - individual</a></li>
+        <li><a href="/responsible-person-address/responsible-person-address_business.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - business</a></li-->
+        <li><a href="/responsible-person-address/responsible-person-address_alt.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - form page</a></li>
       </ul>
 
 
     </div>
   </div>
+
+
+
+  <!--
+
+<br class="opss-br-desktop">
+<a href="https://www.gov.uk/guidance/regulating-medical-devices-in-the-uk#responsible" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">gov.uk/guidance/regulating-medical-devices-in-the-uk (opens in a new tab)</a>
+
+    -->
 
 {% endblock %}
