--- a/app/views/layout-user-testing.html
+++ b/app/views/layout-user-testing.html
@@ -40,19 +40,20 @@
     .govuk-error-summary__list li {display: none; }
 
     .govuk-form-group--error > fieldset > .govuk-error-message,
-    .govuk-radios__conditional .govuk-form-group--error .govuk-error-message {display: block; }
+    .govuk-radios__conditional .govuk-form-group--error .govuk-error-message,
+    .govuk-form-group--error[data-test-for=input] .govuk-error-message {display: block; }
 
+    .test-errors-1, .test-errors-2, .test-errors-3, .test-errors-4,
+    .test-errors-5, .test-errors-6, .test-errors-7, .test-errors-8 {display: block !important; }
 
-    .test-errors-1, .test-errors-2, .test-errors-3, .test-errors-4, .test-errors-5, .test-errors-6 {display: block !important; }
     .test-errors-1 ul li:nth-child(1),
     .test-errors-2 ul li:nth-child(2),
     .test-errors-3 ul li:nth-child(3),
     .test-errors-4 ul li:nth-child(4),
     .test-errors-5 ul li:nth-child(5),
-    .test-errors-6 ul li:nth-child(6) {display: block !important; }
-
-
-
+    .test-errors-6 ul li:nth-child(6),
+    .test-errors-7 ul li:nth-child(7),
+    .test-errors-8 ul li:nth-child(8) {display: block !important; }
   </style>
 {% endblock %}
 
